Construct the structure presheaf for Proj and improve equation meta