@@ -6,18 +6,14 @@ import org.arend.ext.concrete.expr.ConcreteReferenceExpression;
 import org.arend.ext.core.context.CoreBinding;
 import org.arend.ext.core.definition.CoreClassDefinition;
 import org.arend.ext.core.expr.CoreClassCallExpression;
-import org.arend.ext.core.expr.CoreExpression;
 import org.arend.ext.core.expr.CoreFunCallExpression;
-import org.arend.ext.core.expr.CoreIntegerExpression;
 import org.arend.ext.core.ops.CMP;
-import org.arend.ext.core.ops.NormalizationMode;
 import org.arend.ext.error.ErrorReporter;
 import org.arend.ext.typechecking.ExpressionTypechecker;
 import org.arend.ext.typechecking.TypedExpression;
 import org.arend.lib.context.ContextHelper;
 import org.arend.lib.meta.closure.CongruenceClosure;
 import org.arend.lib.meta.cong.CongruenceMeta;
-import org.arend.lib.meta.equation.binop_matcher.FunctionMatcher;
 import org.arend.lib.ring.Monomial;
 import org.arend.lib.util.CountingSort;
 import org.arend.lib.util.Utils;
@@ -36,127 +32,35 @@ import java.util.stream.Collectors;
 import static java.util.Collections.singletonList;
 
 public class RingSolver extends BaseEqualitySolver {
-  private final boolean isRing;
   private final boolean isCommutative;
-  private final boolean isLattice;
-  private final FunctionMatcher zroMatcher;
-  private final FunctionMatcher ideMatcher;
-  private final FunctionMatcher mulMatcher;
-  private final FunctionMatcher addMatcher;
-  private final FunctionMatcher natCoefMatcher;
-  private final FunctionMatcher negativeMatcher;
-  private CompiledTerm lastCompiled;
+  private final TermCompiler termCompiler;
+  private TermCompiler.CompiledTerm lastCompiled;
   private TypedExpression lastTerm;
 
   protected RingSolver(EquationMeta meta, ExpressionTypechecker typechecker, ConcreteFactory factory, ConcreteReferenceExpression refExpr, CoreFunCallExpression equality, TypedExpression instance, CoreClassCallExpression classCall, CoreClassDefinition forcedClass, boolean useHypotheses) {
     super(meta, typechecker, factory, refExpr, instance, useHypotheses);
     this.equality = equality;
-    isLattice = classCall.getDefinition().isSubClassOf(meta.BoundedDistributiveLattice) && (forcedClass == null || forcedClass.isSubClassOf(meta.BoundedDistributiveLattice));
-    isRing = !isLattice && classCall.getDefinition().isSubClassOf(meta.Ring) && (forcedClass == null || forcedClass.isSubClassOf(meta.Ring));
-    isCommutative = isLattice || classCall.getDefinition().isSubClassOf(meta.CMonoid) && (forcedClass == null || forcedClass.isSubClassOf(meta.CMonoid));
-    zroMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, isLattice ? meta.bottom : meta.ext.zro, typechecker, factory, refExpr, meta.ext, 0);
-    ideMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, isLattice ? meta.top : meta.ext.ide, typechecker, factory, refExpr, meta.ext, 0);
-    mulMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, isLattice ? meta.meet : meta.mul, typechecker, factory, refExpr, meta.ext, 2);
-    addMatcher = FunctionMatcher.makeFieldMatcher(classCall, instance, isLattice ? meta.join : meta.plus, typechecker, factory, refExpr, meta.ext, 2);
-    natCoefMatcher = isLattice ? null : FunctionMatcher.makeFieldMatcher(classCall, instance, meta.natCoef, typechecker, factory, refExpr, meta.ext, 1);
-    negativeMatcher = isRing ? FunctionMatcher.makeFieldMatcher(classCall, instance, meta.negative, typechecker, factory, refExpr, meta.ext, 1) : null;
-  }
-
-  protected RingSolver(EquationMeta meta, ExpressionTypechecker typechecker, ConcreteFactory factory, ConcreteReferenceExpression refExpr, CoreFunCallExpression equality, TypedExpression instance, CoreClassCallExpression classCall, CoreClassDefinition forcedClass) {
-    this(meta, typechecker, factory, refExpr, equality, instance, classCall, forcedClass, true);
+    termCompiler = new TermCompiler(classCall, instance, meta.ext, typechecker, refExpr, values, forcedClass);
+    isCommutative = termCompiler.isLattice || classCall.getDefinition().isSubClassOf(meta.CMonoid) && (forcedClass == null || forcedClass.isSubClassOf(meta.CMonoid));
   }
 
   @Override
   protected ConcreteExpression getDefaultValue() {
-    return factory.ref((isLattice ? meta.top : meta.ext.ide).getRef());
+    return factory.ref((termCompiler.isLattice ? meta.top : meta.ext.ide).getRef());
   }
 
   @Override
   protected ConcreteExpression getDataClass(ConcreteExpression instanceArg, ConcreteExpression dataArg) {
-    ConcreteExpression data = factory.ref((isLattice ? meta.LatticeData : (isRing ? (isCommutative ? meta.CRingData : meta.RingData) : (isCommutative ? meta.CSemiringData : meta.SemiringData))).getRef());
-    return factory.classExt(data, Arrays.asList(factory.implementation((isLattice ? meta.LatticeDataCarrier : meta.RingDataCarrier).getRef(), instanceArg), factory.implementation(meta.DataFunction.getRef(), dataArg)));
-  }
-
-  private static class CompiledTerm {
-    final ConcreteExpression originalExpr;
-    final ConcreteExpression concrete;
-    final List<Monomial> nf;
-
-    private CompiledTerm(ConcreteExpression concrete, List<Monomial> nf, ConcreteExpression originalExpr) {
-      this.concrete = concrete;
-      this.nf = nf;
-      this.originalExpr = originalExpr;
-    }
-  }
-
-  private CompiledTerm compileTerm(CoreExpression expression) {
-    List<Monomial> nf = new ArrayList<>();
-    return new CompiledTerm(computeTerm(expression, nf), nf, factory.core(expression.computeTyped()));
-  }
-
-  private ConcreteExpression computeTerm(CoreExpression expression, List<Monomial> nf) {
-    CoreExpression expr = expression.normalize(NormalizationMode.WHNF);
-    if (zroMatcher.match(expr) != null) {
-      return factory.ref(meta.zroTerm.getRef());
-    }
-    if (ideMatcher.match(expr) != null) {
-      nf.add(new Monomial(BigInteger.ONE, Collections.emptyList()));
-      return factory.ref(meta.ideTerm.getRef());
-    }
-
-    List<CoreExpression> addArgs = addMatcher.match(expr);
-    if (addArgs != null) {
-      List<ConcreteExpression> cArgs = new ArrayList<>(2);
-      cArgs.add(computeTerm(addArgs.get(0), nf));
-      cArgs.add(computeTerm(addArgs.get(1), nf));
-      return factory.app(factory.ref(meta.addTerm.getRef()), true, cArgs);
-    }
-
-    List<CoreExpression> mulArgs = mulMatcher.match(expr);
-    if (mulArgs != null) {
-      List<ConcreteExpression> cArgs = new ArrayList<>(2);
-      List<Monomial> nf1 = new ArrayList<>();
-      List<Monomial> nf2 = new ArrayList<>();
-      cArgs.add(computeTerm(mulArgs.get(0), nf1));
-      cArgs.add(computeTerm(mulArgs.get(1), nf2));
-      List<Monomial> newNF = new ArrayList<>();
-      Monomial.multiply(nf1, nf2, newNF);
-      Collections.sort(newNF);
-      nf.addAll(Monomial.collapse(newNF));
-      return factory.app(factory.ref(meta.mulTerm.getRef()), true, cArgs);
-    }
-
-    if (isRing) {
-      List<CoreExpression> negativeArgs = negativeMatcher.match(expr);
-      if (negativeArgs != null) {
-        List<Monomial> nf1 = new ArrayList<>();
-        List<ConcreteExpression> cArgs = Collections.singletonList(computeTerm(negativeArgs.get(0), nf1));
-        Monomial.negate(nf1, nf);
-        return factory.app(factory.ref(meta.negativeTerm.getRef()), true, cArgs);
-      }
-    }
-
-    List<CoreExpression> coefArgs = natCoefMatcher == null ? null : natCoefMatcher.match(expr);
-    if (coefArgs != null) {
-      CoreExpression arg = coefArgs.get(0).normalize(NormalizationMode.WHNF);
-      if (arg instanceof CoreIntegerExpression) {
-        BigInteger coef = ((CoreIntegerExpression) arg).getBigInteger();
-        nf.add(new Monomial(coef, Collections.emptyList()));
-        return factory.app(factory.ref(meta.coefTerm.getRef()), true, Collections.singletonList(factory.number(coef)));
-      }
-    }
-
-    int index = values.addValue(expr);
-    nf.add(new Monomial(BigInteger.ONE, Collections.singletonList(index)));
-    return factory.app(factory.ref(meta.varTerm.getRef()), true, singletonList(factory.number(index)));
+    ConcreteExpression data = factory.ref((termCompiler.isLattice ? meta.LatticeData : (termCompiler.isRing ? (isCommutative ? meta.CRingData : meta.RingData) : (isCommutative ? meta.CSemiringData : meta.SemiringData))).getRef());
+    return factory.classExt(data, Arrays.asList(factory.implementation((termCompiler.isLattice ? meta.LatticeDataCarrier : meta.RingDataCarrier).getRef(), instanceArg), factory.implementation(meta.DataFunction.getRef(), dataArg)));
   }
 
   private void typeToRule(CoreBinding binding, List<Equality> rules) {
     if (binding == null) return;
     CoreFunCallExpression eq = Utils.toEquality(binding.getTypeExpr(), null, null);
     if (eq == null || !typechecker.compare(eq.getDefCallArguments().get(0), getValuesType(), CMP.EQ, refExpr, false, true, false)) return;
-    CompiledTerm lhsTerm = compileTerm(eq.getDefCallArguments().get(1));
-    CompiledTerm rhsTerm = compileTerm(eq.getDefCallArguments().get(2));
+    TermCompiler.CompiledTerm lhsTerm = termCompiler.compileTerm(eq.getDefCallArguments().get(1));
+    TermCompiler.CompiledTerm rhsTerm = termCompiler.compileTerm(eq.getDefCallArguments().get(2));
     if (isCommutative) {
       toCommutativeNF(lhsTerm.nf);
       toCommutativeNF(rhsTerm.nf);
@@ -193,8 +97,8 @@ public class RingSolver extends BaseEqualitySolver {
 
   @Override
   public ConcreteExpression solve(@Nullable ConcreteExpression hint, @NotNull TypedExpression leftExpr, @NotNull TypedExpression rightExpr, @NotNull ErrorReporter errorReporter) {
-    CompiledTerm term1 = lastTerm == leftExpr ? lastCompiled : compileTerm(leftExpr.getExpression());
-    CompiledTerm term2 = compileTerm(rightExpr.getExpression());
+    TermCompiler.CompiledTerm term1 = lastTerm == leftExpr ? lastCompiled : termCompiler.compileTerm(leftExpr.getExpression());
+    TermCompiler.CompiledTerm term2 = termCompiler.compileTerm(rightExpr.getExpression());
     lastTerm = rightExpr;
     lastCompiled = term2;
 
@@ -205,7 +109,7 @@ public class RingSolver extends BaseEqualitySolver {
 
     List<Monomial> nf1 = term1.nf;
     List<Monomial> nf2 = term2.nf;
-    if (isLattice) {
+    if (termCompiler.isLattice) {
       removeDuplicates(nf1);
       removeDuplicates(nf2);
       nf1 = latticeCollapse(nf1);
@@ -226,7 +130,7 @@ public class RingSolver extends BaseEqualitySolver {
         return comSolver.solve(term1, term2, rules);
       }
     }
-    if (!isLattice) {
+    if (!termCompiler.isLattice) {
       nf1 = Monomial.collapse(nf1);
       nf2 = Monomial.collapse(nf2);
     }
@@ -234,7 +138,7 @@ public class RingSolver extends BaseEqualitySolver {
       return null;
     }
 
-    return factory.appBuilder(factory.ref((isLattice ? meta.latticeTermsEq : (isRing ? (isCommutative ? meta.commRingTermsEq : meta.ringTermsEq) : (isCommutative ? meta.commSemiringTermsEq : meta.ringTermsEq))).getRef()))
+    return factory.appBuilder(factory.ref((termCompiler.isLattice ? meta.latticeTermsEq : (termCompiler.isRing ? (isCommutative ? meta.commRingTermsEq : meta.ringTermsEq) : (isCommutative ? meta.commSemiringTermsEq : meta.ringTermsEq))).getRef()))
       .app(factory.ref(dataRef), false)
       .app(term1.concrete)
       .app(term2.concrete)
@@ -269,10 +173,10 @@ public class RingSolver extends BaseEqualitySolver {
 
   private static class Equality {
     public final ConcreteExpression binding;
-    public CompiledTerm lhsTerm;
-    public CompiledTerm rhsTerm;
+    public TermCompiler.CompiledTerm lhsTerm;
+    public TermCompiler.CompiledTerm rhsTerm;
 
-    private Equality(ConcreteExpression binding, CompiledTerm lhsTerm, CompiledTerm rhsTerm) {
+    private Equality(ConcreteExpression binding, TermCompiler.CompiledTerm lhsTerm, TermCompiler.CompiledTerm rhsTerm) {
       this.binding = binding;
       this.lhsTerm = lhsTerm;
       this.rhsTerm = rhsTerm;
@@ -281,7 +185,7 @@ public class RingSolver extends BaseEqualitySolver {
 
   private class ComRingSolver {
 
-    private Poly<BigInteger> termToPoly(CompiledTerm term, int numVars) {
+    private Poly<BigInteger> termToPoly(TermCompiler.CompiledTerm term, int numVars) {
       var poly = Poly.constant(BigInteger.ZERO, numVars, Ring.Z);
 
       for (Monomial m : term.nf) {
@@ -358,7 +262,7 @@ public class RingSolver extends BaseEqualitySolver {
 
     private int numVarsInNF(List<Monomial> nf) {
       if (nf.isEmpty()) return 0;
-      return Collections.max(nf.stream().map(m -> m.elements.isEmpty() ? 0 : Collections.max(m.elements)).collect(Collectors.toList())) + 1;
+      return Collections.max(nf.stream().map(m -> m.elements.isEmpty() ? 0 : Collections.max(m.elements)).toList()) + 1;
     }
 
     private ConcreteExpression minusRingTerm(ConcreteExpression a, ConcreteExpression b) {
@@ -375,7 +279,7 @@ public class RingSolver extends BaseEqualitySolver {
         .build();
     }
 
-    public ConcreteExpression solve(CompiledTerm term1, CompiledTerm term2, List<Equality> axioms) {
+    public ConcreteExpression solve(TermCompiler.CompiledTerm term1, TermCompiler.CompiledTerm term2, List<Equality> axioms) {
       int numVariables = Integer.max(numVarsInNF(term1.nf), numVarsInNF(term2.nf));
       for (Equality axiom : axioms) {
         numVariables = Integer.max(numVarsInNF(axiom.lhsTerm.nf), numVariables);
